targeting-service/k8s/targeting-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-targeting-service
  namespace: targeting-service
  labels:
    app: targeting-service
    instance: app-targeting-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: targeting-service
      instance: app-targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
        instance: app-targeting-service
    spec:
      containers:
        - name: targeting-service
          # image: targeting-service:local # Local
          image: 370930247065.dkr.ecr.us-east-2.amazonaws.com/targeting-service:latest # Nuvem
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          ports:
            - containerPort: 8003
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 15
