targeting-service/k8s/targeting-service-ingress.yaml
# targeting-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-targeting-service
  namespace: targeting-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /targeting(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-targeting-service
                port:
                  number: 80
